--- a/report.html
+++ b/report.html
@@ -103,7 +103,7 @@
         </div>
         <div class="row">
             <div class="col-md-12">
-                <h2>How to increase success rate by <span id="totalImpact"></span>%</h2>
+                <h2>How to increase success rate adding <span id="totalImpact"></span>%</h2>
                 <table id="recommendationsTable" class="table table-striped table-sm">
                     <thead>
                         <tr>
